--- a/page1.html
+++ b/page1.html
@@ -182,16 +182,16 @@
 				document.getElementById("scoreValue").value=score;
 				var d1 		= document.getElementById('one');
 				alert(document.getElementById("tick1").src);
-				if (document.getElementById("tick1").src === "http://localhost/images/tick.png") 
+				if (document.getElementById("tick1").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick1").src = "../images/tick4.png";
             		document.getElementById('tick1').onclick = null;
         		}
-        		else if (document.getElementById("tick2").src === "http://localhost/images/tick.png") 
+        		else if (document.getElementById("tick2").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick2").src = "../images/tick4.png";
             		document.getElementById('tick2').onclick = null;
-        		} else if (document.getElementById("tick3").src === "http://localhost/images/tick.png") 
+        		} else if (document.getElementById("tick3").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick3").src = "../images/tick4.png";
             		document.getElementById('tick3').onclick = null;
