--- a/page1.html
+++ b/page1.html
@@ -181,7 +181,7 @@
 				score 		= parseInt(score)+10;
 				document.getElementById("scoreValue").value=score;
 				var d1 		= document.getElementById('one');
-				alert(document.getElementById("tick1").src);
+				// alert(document.getElementById("tick1").src);
 				if (document.getElementById("tick1").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick1").src = "../images/tick4.png";
