--- a/page1.html
+++ b/page1.html
@@ -181,7 +181,6 @@
 				score 		= parseInt(score)+10;
 				document.getElementById("scoreValue").value=score;
 				var d1 		= document.getElementById('one');
-				// alert(document.getElementById("tick1").src);
 				if (document.getElementById("tick1").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick1").src = "../images/tick4.png";
@@ -213,27 +212,27 @@
 				score 		= parseInt(score)+20;
 				document.getElementById("scoreValue").value=score;
 				var d1 		= document.getElementById('two');
-				if (document.getElementById("tick4").src === "http://localhost/images/tick.png") 
+				if (document.getElementById("tick4").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick4").src = "../images/tick4.png";
             		document.getElementById('tick4').onclick = null;
         		}
-        		else if (document.getElementById("tick5").src === "http://localhost/images/tick.png") 
+        		else if (document.getElementById("tick5").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick5").src = "../images/tick4.png";
             		document.getElementById('tick5').onclick = null;
         		} 
-        		else if (document.getElementById("tick6").src === "http://localhost/images/tick.png") 
+        		else if (document.getElementById("tick6").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick6").src = "../images/tick4.png";
             		document.getElementById('tick6').onclick = null;
         		}
-        		else if (document.getElementById("tick7").src === "http://localhost/images/tick.png") 
+        		else if (document.getElementById("tick7").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick7").src = "../images/tick4.png";
             		document.getElementById('tick7').onclick = null;
         		}
-        		else if (document.getElementById("tick8").src === "http://localhost/images/tick.png") 
+        		else if (document.getElementById("tick8").src === "http://nadachashmi.github.io/images/tick.png") 
         		{
             		document.getElementById("tick8").src = "../images/tick4.png";
             		document.getElementById('tick8').onclick = null;
