--- a/page1.html
+++ b/page1.html
@@ -82,6 +82,7 @@
 			}
 			#score{
 				font-size: 1em;
+				text-align: center;
 				width:140px;
 				height:40px;
 				line-height: 40px;
@@ -140,13 +141,11 @@
 		<aside id="page">
 			<div id='score'></div>
 			<input type="hidden" name="scoreValue" id="scoreValue" value="0">
-			<!-- <input id="slider" value="0" oninput="updateScore(this.value)" /> -->
 			<br/><br/>
 
 			<div id='scorecard'>
 
 				<div id='icon'></div>
-				<!-- <h3>John Doe</h3> -->
 				Level: {level} <br/>
 				Status: {levelname}<br/>
 				<i>'{quote}'</i>
@@ -160,10 +159,7 @@
 				
 			</div>
 			<br/>
-			<!-- <a href="https://medium.com/@mulhoon/easy-gamification-in-javascript-with-levelup-js-8ff3b67e7706">Read more</a> &nbsp;&middot;&nbsp;
-			<a href="https://github.com/mulhoon/score.js">Download on Github</a> -->
 			<br/><br/><br/>
-		<!-- </div> -->
 		</aside>
 	</body>
 
