--- a/page1.html
+++ b/page1.html
@@ -237,13 +237,13 @@
 					d1.insertAdjacentHTML('beforeend', '<p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue2()" id="tick5"/> Add profile picture.</p>');
 				}
 				if(score==70){
-					d1.insertAdjacentHTML('beforeend', '<p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue2()" id="tick6"/> Get the app</p>');
+					d1.insertAdjacentHTML('beforeend', '<p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue2()" id="tick6"/> Get the app.</p>');
 				}
 				if(score==90){
-					d1.insertAdjacentHTML('beforeend', '<p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue2()" id="tick7"/> Send message to any employee to get invited to dubai_office (other than Aju and Shree)</p>');
+					d1.insertAdjacentHTML('beforeend', '<p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue2()" id="tick7"/> Send message to any employee to get invited to dubai_office (other than Aju and Shree).</p>');
 				}
 				if(score==110){
-					d1.insertAdjacentHTML('beforeend', '<p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue2()" id="tick8"/> Get pre-written message congratulations and link to Trello and request to meet with <br> department person to get introduced to Trello</p>');
+					d1.insertAdjacentHTML('beforeend', '<p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue2()" id="tick8"/> Get pre-written message congratulations and link to Trello and request to meet with <br> department person to get introduced to Trello.</p>');
 				}
 				if(score==130){
 					d1.insertAdjacentHTML('beforeend', '<p id="begin" >Level 3: Trello Certified</p><div id="three"><p class="instructions"><img src="../images/tick.png" style="vertical-align:middle" width="30px" onclick="updateScoreValue3()" id="tick9" /> Sign up.</p></div>');
@@ -271,7 +271,7 @@
 
 				scorecard.innerHTML = s;
 				scorecard.className = d.levelname;
-				document.getElementById("score").innerHTML = 'score: '+d.score;
+				document.getElementById("score").innerHTML = 'Score: '+d.score;
 				document.getElementById("icon").className = 'icons8-' + d.status;
 			};
 			updateScore();
